--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
                 cache: "yarn"
             - name: Install dependencies
               run: yarn
+            - name: Build (Stub)
+              run: yarn dev:prepare
             - name: Build
               run: yarn build
             - name: Download artifacts
